@@ -1,9 +1,11 @@
 plugins {
     id 'java'
-    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
+    id 'org.springframework.boot' version '2.2.4.RELEASE' apply false
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'com.fizzed.rocker' version '1.2.3'
 }
 
-group 'com.anajoa.grape.server'
+group 'com.anajoa.grape'
 
 ext.moduleName = 'com.anajoa.grape.server'
 
@@ -37,20 +39,15 @@ test {
             '--module-path', classpath.asPath,
             '--add-modules', 'ALL-MODULE-PATH',
             '--add-reads', "$moduleName=junit",
+            '--add-opens', "com.anajoa.grape.server/com.anajoa.grape.server=junit",
             '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
         ]
         classpath = files()
     }
 }
 
-processResources {
-    from ("${rootDir}/front/dist/front/") {
-        into 'static'
-    }
-}
-
-sourceCompatibility = 12
-targetCompatibility = 12
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -58,20 +55,51 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "io.projectreactor:reactor-bom:Californium-RELEASE"
+        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
     }
 }
 
 dependencies {
-    compile 'io.projectreactor.netty:reactor-netty'
-    compile 'ch.qos.logback:logback-classic:1.2.3'
-    compile 'commons-io:commons-io:2.6'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
-    compile 'org.imgscalr:imgscalr-lib:4.2'
-    compile 'com.drewnoakes:metadata-extractor:2.12.0'
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
-    testImplementation 'org.projectlombok:lombok:1.18.10'
-    testImplementation 'org.mapstruct:mapstruct-processor:1.3.1.Final'
-    testCompile 'junit:junit:4.12'
+    implementation project(':usecase')
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'com.fizzed:rocker-runtime:1.2.3'
+    testImplementation 'junit:junit:4.12'
+}
+
+sourceSets {
+    main {
+        rocker {
+            srcDir('src/main/java')
+        }
+    }
+}
+
+rocker {
+    // (All settings are shown with their defaults)
+    //
+    // Skips building templates all together
+    skip false
+    // Base directory for generated java sources, actual target is sub directory
+    // with the name of the source set. The value is passed through project.file().
+    outputBaseDirectory = "$buildDir/generated-src/rocker"
+    // Base directory for the directory where the hot reload feature
+    // will (re)compile classes to at runtime (and where `rocker-compiler.conf`
+    // is generated, which is used by RockerRuntime.getInstance().setReloading(true)).
+    // The actual target is a sub directory with the name of the source set.
+    // The value is passed through project.file().
+    classBaseDirectory = "$buildDir/classes"
+    failOnError true
+    skipTouch true
+    // must not be empty when skipTouch is equal to false
+    touchFile ""
+    javaVersion '11'
+    extendsClass null
+    extendsModelClass null
+    optimize null
+    discardLogicWhitespace null
+    targetCharset null
+    suffixRegex null
+    postProcessing null
+    markAsGenerated null
 }
